fixed: -update: change updating status of order by admin to "patch" instead of "put"
-fix: return customer to findAllOrders by admin but not by customer and change the respective mapper and dtos to the new logic
